# reflex-dom-plaid

./: build_all.sh  build_ghc.sh  cabal-ghcjs.project  cabal.project  default.nix  hie.yaml~  plaid-api-client-hs.nix
.github/workflows/: main.yml
demo/: Main.hs  demo.cabal
plaid-api-client/: README.md  stack.yaml  the-plaid.cabal
plaid-api-client/lib/ThePlaid/: API.hs
plaid-rest-api-generated/: plaid-rest-api-generated.cabal
plaid-rest-api-generated/lib/Plaid/: API.hs  Types.hs
plaid-rest-api-generated/lib/Plaid/Types/: ACHClass.hs  APR.hs  AccountAccess.hs  AccountAssets.hs  AccountAssetsAllOf.hs  AccountBalance.hs  AccountBase.hs  AccountFilter.hs  AccountFiltersResponse.hs  AccountIdentity.hs  AccountIdentityAllOf.hs  AccountProductAccess.hs  AccountProductAccessNullable.hs  AccountSelectionCardinality.hs  AccountSubtype.hs  AccountType.hs  AccountsBalanceGetRequest.hs  AccountsBalanceGetRequestOptions.hs  AccountsGetRequest.hs  AccountsGetRequestOptions.hs  AccountsGetResponse.hs  Address.hs  AddressData.hs  AddressDataNullable.hs  AddressNullable.hs  AddressPurposeLabel.hs  Application.hs  ApplicationGetRequest.hs  ApplicationGetResponse.hs  AssetReport.hs  AssetReportAuditCopyCreateRequest.hs  AssetReportAuditCopyCreateResponse.hs  AssetReportAuditCopyGetRequest.hs  AssetReportAuditCopyRemoveRequest.hs  AssetReportAuditCopyRemoveResponse.hs  AssetReportCreateRequest.hs  AssetReportCreateRequestOptions.hs  AssetReportCreateResponse.hs  AssetReportFilterRequest.hs  AssetReportFilterResponse.hs  (+778 more)
reflex-dom-plaid/: hie.yaml  reflex-dom-plaid.cabal
reflex-dom-plaid-backend/: CHANGELOG.md  reflex-dom-plaid-backend.cabal
reflex-dom-plaid-backend/src/Reflex/Dom/: Plaid.hs
reflex-dom-plaid-backend/src/Reflex/Dom/Plaid/Backend/: Storage.hs
reflex-dom-plaid-backend/src/Reflex/Dom/Plaid/Backend/Storage/: StateT.hs
reflex-dom-plaid-common/: CHANGELOG.md  reflex-dom-plaid-common.cabal
reflex-dom-plaid-common/src/Reflex/Dom/Plaid/: Common.hs
reflex-dom-plaid/Reflex/Dom/Plaid/: Link.hs
