name:           reflex-dom-plaid
version:        0.0.1
synopsis:       Plaid Link integration for Reflex-DOM
category:       Web
maintainer:     maintainer@obsidian.systems
copyright:      2018 Obsidian Systems LLC
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

library
  exposed-modules:
    Reflex.Dom.Plaid.Link
  hs-source-dirs: .
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -O2
  build-depends:
      base 
    , ghcjs-dom 
    , jsaddle 
    , lens 
    , mtl 
    , reflex-dom-core 
    , text
    , aeson
    , reflex-dom-plaid-common
  default-language: Haskell2010
  default-extensions:
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    FlexibleContexts
    LambdaCase 
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications